--- a/src/Data.ini
+++ b/src/Data.ini
@@ -1,85 +1,82 @@
-;DATA file (INI based) for the Inno Setup based installer
+; FSCW Data File
 
 [ID]
-;Internal ID for this setup, never displayed. 
-;Whitespaces are NOT allowed, only a-z, A-Z, 0-9.
-UniqueID=HackTestWinInstaller
-;IMPORTANT: DO NOT CHANGE THIS VALUE *EVER* ONCE YOU HAVE SET IT
-;           AND THE INSTALLER HAS BEEN USED BY USERS!
+; Internal ID for this setup, never displayed. 
+; Whitespaces are NOT allowed, only a-z, A-Z, 0-9.
+UniqueID=TenGallonHatSetup
+; IMPORTANT: DO NOT CHANGE THIS VALUE *EVER* ONCE YOU HAVE SETUP HAS BEEN USED!
 
 
 [Version]
-;Version of the Setup (*NOT* for the Font release).
+; Version of the Setup (*NOT* for the Font release).
 Version=1.0.0
-;This value can be overwritten by an CI tool during build like this (param EXTERNAL_VERSION):
-;iscc.exe /DEXTERNAL_VERSION=%APPVEYOR_BUILD_VERSION% src/YourScriptFile.iss
+; This value can be overwritten by an CI tool during build like this (param EXTERNAL_VERSION):
+; iscc.exe /DEXTERNAL_VERSION=%APPVEYOR_BUILD_VERSION% src/YourScriptFile.iss
 
-;Version of FONT release 
-FontVersion=2.020
-;This value can be overwritten by an CI tool during build like this (param EXTERNAL_FONT_VERSION):
-;iscc.exe /DEXTERNAL_FONT_VERSION=%MY_FONT_BUILD_VERSION% src/YourScriptFile.iss
+; Version of the FONT release 
+FontVersion=1.02
+; This value can be overwritten by an CI tool during build like this (param EXTERNAL_FONT_VERSION):
+; iscc.exe /DEXTERNAL_FONT_VERSION=%MY_FONT_BUILD_VERSION% src/YourScriptFile.iss
 
 
 [About]
-;Name of the font release. Will be displayed during setup like this:
-;Setup is now ready to install the {#FontName} v{#FontVersion} on your system.
-FontName=Hack TEST fonts
+; Name of the font release. Will be displayed during setup like this:
+; Setup is now ready to install the {#FontName} v{#FontVersion} on your system.
+FontName=Ten Gallon Hat fonts
 
-;The entity that releases the font and the setup
+; The entity that releases the font and the setup
 Publisher=Michael Hex / Source Foundry
 
-;Copyright for the font/setup.
+; Copyright for the font
 Copyright=Copyright © 2016 Michael Hex / Source Foundry
 
-;This URL will be created as web shortcut [Website.lnk} in the destination folder and
-;also displayed in the Add/Remove Programs applet.
+; This URL will be created as web shortcut (Website.lnk) in the destination folder and
+; is also displayed in the Add/Remove Programs applet.
 Website=http://sourcefoundry.org/hack/
-;Internal notice: 
-;In the old setup, Add/Remove Programs -> Support (AppSupportURL) pointed to https://github.com/source-foundry/Hack-windows-installer'
-;File Hack Homepage.lnk (Section ICONS) pointed to http://sourcefoundry.org/hack/
 
 
 [General]
-;Name of the installer, can be changed at any time and is displayed to the user during setup.
-;This is also the name that is displayed inside the Add/Remove Programs Applet.
-Name=Hack Test Win Installer
+; Name of the installer, can be changed at any time and is displayed to the user during setup.
+; This is also the name that is displayed inside the Add/Remove Programs Applet.
+Name=Ten Gallon Hat Font
 
-;Name of the resulting EXE file.
-;*DO NOT* add the extension (.exe), this will be done by the script. 
-ExeFile=HackTestWinInstaller
+; Name of the resulting EXE file.
+; *DO NOT* add the extension .exe, this will be done by the script. 
+ExeFile=TenGallonHatSetup
 
-;Folder name generated in C:\Program Files\.
-;This is required as the uninstall information and the log files needs to be stored somewhere.
+; Name of the folder generated in C:\Program Files\.
+; This is required as the uninstall information and the log files needs to be stored somewhere.
 DestinationFolder=Hack Test Win Installer
 
-;Icon that will be applied to the resulting setup exe and displayed in Add/Remove Programs applet.
-;Can be empty. 
-Icon=
+; Icon that will be applied to the resulting setup exe and displayed in Add/Remove Programs applet.
+; Can be empty. 
+Icon=src\Hack-installer-icon.ico
 
-;The license file(s) that will be copied to the destination folder (optional, but highly recommended).
-;Can be a single file:
- ;LicenseFile=License.txt
-;A single file from a sub folder:
- ;LicenseFile=lic\License.md
-;Several files at once by using wildcards:
- ;LicenseFile=license*.*
+; The license file(s) that will be copied to the destination folder (optional, but highly recommended).
+; Can be a single file:
+  ;LicenseFile=License.txt
+; A single file from a sub folder:
+  ;LicenseFile=lic\License.md
+; Several files at once from a sub folder by using wildcards:
+  ;LicenseFile=lic\license*.*
+; Several files at once from the base folder
 LicenseFile=license*.*
 
 
-;This section defines which fonts should be installed.
+; This section defines which fonts should be installed.
 [InstallFonts]
-;In which sub folder are the font files located (as seen from the base path).
-SourceFolder=testfonts
+; In which sub folder are the font files located, from the base folder of the repository.
+SourceFolder=fonts
 
-;How many fonts are in this section we should install.
-;This must be number of the last File.X and Name.X entry
+; How many fonts are in this section we should install.
+; This must be number of the last File.X and Name.X entry
 Count=4
 
-;For Name.X *DO NOT* append "(TrueType)" - The setup will add it automatically.
+; For Name.X *DO NOT* append "(TrueType)" - The setup will add it automatically.
 File.1=Hack-Bold-DEV.ttf
 Name.1=Hack Bold
 
-;For any font that is named "Regular", *DO NOT* add "Regular". Windows assumes "Regular" to not be used.
+; For any font that is named "Regular", *DO NOT* add "Regular". Windows assumes "Regular" to not be used.
 File.2=Hack-Regular-DEV.ttf
 Name.2=Hack
 
@@ -90,24 +87,22 @@ File.4=Hack-Italic-DEV.ttf
 Name.4=Hack Italic
 
 
-;Use this section to remove fonts upon installation, e.g. old versions of your files
-;that had different file names or font names. The Count for this section can be zero.
+; Use this section to remove fonts upon installation, e.g. old versions of your files
+; that had different file names or font names. The Count for this section can be zero.
 [RemoveFonts]
 Count=4
 
-;These files are left overs from Hack 2.10 which used different names for italic
-
-;Again, *DO NOT* append "(TrueType)" for any Name.X entry
-File.1=Hack-BoldOblique.ttf
+; Again, *DO NOT* append "(TrueType)" for any Name.X entry
+File.1=Hack-BoldOblique-DEV.ttf
 Name.1=Hack Bold Oblique
 
-File.2=Hack-RegularOblique.ttf
+File.2=Hack-RegularOblique-DEV.ttf
 Name.2=Hack Oblique
 
-File.3=Hack-BoldOblique.otf
+File.3=Hack-BoldOblique-DEV.otf
 Name.3=Hack Bold Oblique
 
-File.4=Hack-RegularOblique.otf
+File.4=Hack-RegularOblique-DEV.otf
 Name.4=Hack Oblique
 
 
