--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,7 +18,7 @@ install:
   # Create TEMP folder
   - md C:\temp
   # Download and install Inno Setup. 
-  - ps: (new-object net.webclient).DownloadFile('$env:INNOSETUP_DOWNLOAD_URL', 'c:\temp\innosetup.exe')
+  - ps: (new-object net.webclient).DownloadFile(env:INNOSETUP_DOWNLOAD_URL, 'c:\temp\innosetup.exe')
   - c:\temp\innosetup.exe TYPE=full /VERYSILENT /SUPPRESSMSGBOXES /NORESTART /CLOSEAPPLICATIONS /NORESTARTAPPLICATIONS
   # Add Inno Setup to PATH so the ISCC command is found
   - set PATH="C:\Program Files (x86)\Inno Setup 5";%PATH%
