Updated download URL in YML

--- a/src/DATA.ini
+++ b/src/DATA.ini
@@ -1,4 +1,9 @@
-; FSCW Data File
+; DATA.ini for Font Setup Creator for Windows (FSCW)
+; Copyright (C) 2016 Michael 'Tex' Hex / Source Foundry
+; Licensed under the MIT License
+; https://github.com/source-foundry/fscw
+
+
 
 [ID]
 ; Internal ID for this setup, never displayed. 
