--- a/src/DATA.ini
+++ b/src/DATA.ini
@@ -1,4 +1,4 @@
-; DATA.ini for Font Setup Creator for Windows (FSCW)
+﻿; DATA.ini for Font Setup Creator for Windows (FSCW)
 ; Copyright (C) 2016 Michael 'Tex' Hex / Source Foundry
 ; Licensed under the MIT License
 ; https://github.com/source-foundry/fscw
@@ -35,9 +35,9 @@ Publisher=Michael Hex / Source Foundry
 ; Copyright for the font
 Copyright=Copyright © 2016 Michael Hex / Source Foundry
 
-; This URL will be created as web shortcut (Website.lnk) in the destination folder and
+; This URL will be created as web shortcut (Homepage.lnk) in the destination folder and
 ; is also displayed in the Add/Remove Programs applet.
-Website=http://sourcefoundry.org/hack/
+Homepage=http://sourcefoundry.org/hack/
 
 
 [General]
