Fixed incorrect entry in DATA.ini

--- a/src/DATA.ini
+++ b/src/DATA.ini
@@ -1,7 +1,7 @@
 ﻿; DATA.ini for Font Setup Creator for Windows (FSCW)
 ; Copyright (C) 2016 Michael 'Tex' Hex / Source Foundry
 ; Licensed under the MIT License
-; https://github.com/source-foundry/fscw
+; https://github.com/source-foundry/FSCW
 
 
 
@@ -9,7 +9,7 @@
 ; Internal ID for this setup, never displayed. 
 ; Whitespaces are NOT allowed, only a-z, A-Z, 0-9.
 UniqueID=TenGallonHatSetup
-; IMPORTANT: DO NOT CHANGE THIS VALUE *EVER* ONCE YOU HAVE SETUP HAS BEEN USED!
+; IMPORTANT: SET THIS VALUE ONCE AND THEN *NEVER EVER* CHANGE IT!
 
 
 [Version]
@@ -42,7 +42,7 @@ Homepage=http://sourcefoundry.org/hack/
 
 [General]
 ; Name of the installer, can be changed at any time and is displayed to the user during setup.
-; This is also the name that is displayed inside the Add/Remove Programs Applet.
+; This is also the name that is displayed inside the Add/Remove Programs applet.
 Name=Ten Gallon Hat Font
 
 ; Name of the resulting EXE file.
@@ -51,7 +51,7 @@ ExeFile=TenGallonHatSetup
 
 ; Name of the folder generated in C:\Program Files\.
 ; This is required as the uninstall information and the log files needs to be stored somewhere.
-DestinationFolder=Hack Test Win Installer
+DestinationFolder=Ten Gallon Hat Font
 
 ; Icon that will be applied to the resulting setup exe and displayed in Add/Remove Programs applet.
 ; Can be empty. 
