--- a/src/DATA.ini
+++ b/src/DATA.ini
@@ -16,12 +16,12 @@ UniqueID=TenGallonHatSetup
 ; Version of the Setup (*NOT* for the Font release).
 Version=1.0.0
 ; This value can be overwritten by an CI tool during build like this (param EXTERNAL_VERSION):
-; iscc.exe /DEXTERNAL_VERSION=%APPVEYOR_BUILD_VERSION% src/YourScriptFile.iss
+; iscc.exe /DEXTERNAL_VERSION=%APPVEYOR_BUILD_VERSION% src/FSCW.iss
 
 ; Version of the FONT release 
 FontVersion=1.02
 ; This value can be overwritten by an CI tool during build like this (param EXTERNAL_FONT_VERSION):
-; iscc.exe /DEXTERNAL_FONT_VERSION=%MY_FONT_BUILD_VERSION% src/YourScriptFile.iss
+; iscc.exe /DEXTERNAL_FONT_VERSION=%MY_FONT_BUILD_VERSION% src/FSCW.iss
 
 
 [About]
