Updated homepage URL

--- a/src/DATA.ini
+++ b/src/DATA.ini
@@ -37,7 +37,7 @@ Copyright=Copyright © 2016 Michael Hex / Source Foundry
 
 ; This URL will be created as web shortcut (Homepage.lnk) in the destination folder and
 ; is also displayed in the Add/Remove Programs applet.
-Homepage=http://sourcefoundry.org/hack/
+Homepage=https://github.com/source-foundry/FSCW
 
 
 [General]
