Added HomepageURL and SupportURL parameters

--- a/src/DATA.ini
+++ b/src/DATA.ini
@@ -35,9 +35,13 @@ Publisher=Michael Hex / Source Foundry
 ; Copyright for the font
 Copyright=Copyright © 2016 Michael Hex / Source Foundry
 
-; This URL will be created as web shortcut (Homepage.lnk) in the destination folder and
-; is also displayed in the Add/Remove Programs applet.
-Homepage=https://github.com/source-foundry/FSCW
+; This URL will be created as web shortcut (Homepage.lnk) in the destination folder.
+; It should contain the URL of your repository where the FONT lives.
+HomepageURL=https://github.com/source-foundry/ten-gallon-font/
+
+; This URL be be displayed in Add/Remove programs as "Support URL".
+; It should point to the repository where you create this Setup EXE
+SupportURL=https://github.com/source-foundry/FSCW
 
 
 [General]
