--- a/src/DATA.ini
+++ b/src/DATA.ini
@@ -1,5 +1,5 @@
 ﻿; DATA.ini for Font Setup Creator for Windows (FSCW)
-; Copyright (C) 2016 Michael 'Tex' Hex / Source Foundry
+; Copyright (C) 2017 Michael 'Tex' Hex / Source Foundry
 ; Licensed under the MIT License
 ; https://github.com/source-foundry/FSCW
 
@@ -8,7 +8,7 @@
 [ID]
 ; Internal ID for this setup, never displayed. 
 ; Whitespaces are NOT allowed, only a-z, A-Z, 0-9.
-UniqueID=TenGallonHatSetup
+UniqueID=FSCW-TestFontSetup
 ; IMPORTANT: SET THIS VALUE ONCE AND THEN *NEVER EVER* CHANGE IT!
 
 
@@ -27,17 +27,17 @@ FontVersion=1.02
 [About]
 ; Name of the font release. Will be displayed during setup like this:
 ; Setup is now ready to install the {#FontName} v{#FontVersion} on your system.
-FontName=Ten Gallon Hat fonts
+FontName=FCSW Test Vertical Fonts
 
 ; The entity that releases the font and the setup
 Publisher=Michael Hex / Source Foundry
 
 ; Copyright for the font
-Copyright=Copyright © 2016 Michael Hex / Source Foundry
+Copyright=Copyright © 2017 Michael Hex / Source Foundry
 
 ; This URL will be created as web shortcut (Homepage.lnk) in the destination folder.
 ; It should contain the URL of your repository where the FONT lives.
-HomepageURL=https://github.com/source-foundry/ten-gallon-font/
+HomepageURL=https://github.com/source-foundry/FSCW/
 
 ; This URL be be displayed in Add/Remove programs as "Support URL".
 ; It should point to the repository where you create this Setup EXE
@@ -47,15 +47,15 @@ SupportURL=https://github.com/source-foundry/FSCW
 [General]
 ; Name of the installer, can be changed at any time and is displayed to the user during setup.
 ; This is also the name that is displayed inside the Add/Remove Programs applet.
-Name=Ten Gallon Hat Font
+Name=FSCW Test Vertical Fonts
 
 ; Name of the resulting EXE file.
 ; *DO NOT* add the extension .exe, this will be done by the script. 
-ExeFile=TenGallonHatSetup
+ExeFile=FSCW-TestVertical-Fonts-Setup
 
 ; Name of the folder generated in C:\Program Files\.
 ; This is required as the uninstall information and the log files needs to be stored somewhere.
-DestinationFolder=Ten Gallon Hat Font
+DestinationFolder=FSCW Test Vertical Fonts
 
 ; Icon that will be applied to the resulting setup exe and displayed in Add/Remove Programs applet.
 ; Can be empty. 
@@ -82,18 +82,18 @@ SourceFolder=fonts
 Count=4
 
 ; For Name.X *DO NOT* append "(TrueType)" - The setup will add it automatically.
-File.1=Hack-Bold-DEV.ttf
-Name.1=Hack Bold
+File.1=Vertical-Bold.ttf
+Name.1=Vertical Bold
 
 ; For any font that is named "Regular", *DO NOT* add "Regular". Windows assumes "Regular" to not be used.
-File.2=Hack-Regular-DEV.ttf
-Name.2=Hack
+File.2=Vertical-Regular.tff
+Name.2=Vertical
 
-File.3=Hack-BoldItalic-DEV.ttf
-Name.3=Hack Bold Italic
+File.3=Vertical-BoldItalic.ttf
+Name.3=Vertical Bold Italic
 
-File.4=Hack-Italic-DEV.ttf
-Name.4=Hack Italic
+File.4=Vertical-Italic.ttf
+Name.4=Vertical Italic
 
 
 ; Use this section to remove fonts upon installation, e.g. old versions of your files
