Fixed file extension typo

--- a/src/DATA.ini
+++ b/src/DATA.ini
@@ -86,7 +86,7 @@ File.1=Vertical-Bold.ttf
 Name.1=Vertical Bold
 
 ; For any font that is named "Regular", *DO NOT* add "Regular". Windows assumes "Regular" to not be used.
-File.2=Vertical-Regular.tff
+File.2=Vertical-Regular.ttf
 Name.2=Vertical
 
 File.3=Vertical-BoldItalic.ttf
